k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ls-ms-web
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      project: ls-ms-web
  template:
    metadata:
      name: ls-ms-web
      labels:
        project: ls-ms-web
    spec:
      containers:
        - name: ls-ms-web
          image: julekgwa/lotto

---
apiVersion: v1
kind: Service
metadata:
  name: ls-ms-web
spec:
  selector:
    project: ls-ms-web
  ports:
    - port: 80
      targetPort: 80
